--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   <body>
     <header class="header">
       <!-- Theme toggle icon -->
-      <div style="display: flex; align-items: center; gap: 0.1rem;">
-        <i class="bx bx-moon" id="theme-toggle" style="font-size:2.5rem;cursor:pointer;"></i>
+      <div style="display: flex; align-items: center; gap: 0.1rem">
+        <i
+          class="bx bx-moon"
+          id="theme-toggle"
+          style="font-size: 2.5rem; cursor: pointer"
+        ></i>
         <a href="#home" class="logo">th💧nsie</a>
       </div>
       <i class="bx bx-menu" id="menu-icon"></i>
@@ -67,7 +71,7 @@
           <div class="timeline-date">2021</div>
           <div class="timeline-content">
             <h3>High School</h3>
-            <p>I really had a tough time at high school. I t</p>
+            <p>Information for this part will be provided on the next deployemnts.</p>
           </div>
         </div>
         <div class="timeline-item">
@@ -75,7 +79,7 @@
           <div class="timeline-date">2022</div>
           <div class="timeline-content">
             <h3>Internship</h3>
-            <p>I really had a tough time at high school. I t</p>
+            <p>Information for this part will be provided on the next deployemnts.</p>
           </div>
         </div>
         <div class="timeline-item">
@@ -83,7 +87,7 @@
           <div class="timeline-date">2023</div>
           <div class="timeline-content">
             <h3>Cell C</h3>
-            <p>I really had a tough time at high school. I t</p>
+            <p>Information for this part will be provided on the next deployemnts.</p>
           </div>
         </div>
         <div class="timeline-item">
@@ -91,7 +95,7 @@
           <div class="timeline-date">2023</div>
           <div class="timeline-content">
             <h3>Cell C</h3>
-            <p>I really had a tough time at high school. I t</p>
+            <p>Information for this part will be provided on the next deployemnts.</p>
           </div>
         </div>
       </div>
@@ -103,25 +107,37 @@
         <div class="service-box">
           <div class="service-info">
             <h4>Full Stack Developer</h4>
-            <p>This is where we get to do you better</p>
+            <p>
+              This part will list and describe all the projects and services i
+              ever worked on. And it will be deployed on the up-coming sprint
+            </p>
           </div>
         </div>
         <div class="service-box">
           <div class="service-info">
             <h4>Teaching</h4>
-            <p>This is where we get to do you better</p>
+            <p>
+              This part will list and describe all the projects and services i
+              ever worked on. And it will be deployed on the up-coming sprint
+            </p>
           </div>
         </div>
         <div class="service-box">
           <div class="service-info">
             <h4>Back-end</h4>
-            <p>This is where we get to do you better</p>
+            <p>
+              This part will list and describe all the projects and services i
+              ever worked on. And it will be deployed on the up-coming sprint
+            </p>
           </div>
         </div>
         <div class="service-box">
           <div class="service-info">
             <h4>Back-end</h4>
-            <p>This is where we get to do you better</p>
+            <p>
+              This part will list and describe all the projects and services i
+              ever worked on. And it will be deployed on the up-coming sprint
+            </p>
           </div>
         </div>
       </div>
@@ -144,13 +160,8 @@
               <i class="bx bxs-star" id="star"></i>
             </div>
             <p>
-              This communication is intended for the person(s) or organisation
-              named and may be confidential, legally privileged and protected in
-              law. If you are not the intended recipient, please advise us
-              immediately and do not disclose, copy or distribute the contents
-              to any person. We very much appreciate your help with this.
-              However, you also need to be aware that failure to comply with
-              these instructions may constitute a criminal offence
+              This section will be used to display testimonials. It will be
+              deployed to the next sprint.
             </p>
           </div>
           <div class="testimonial-item">
@@ -165,13 +176,8 @@
               <i class="bx bxs-star" id="star"></i>
             </div>
             <p>
-              This communication is intended for the person(s) or organisation
-              named and may be confidential, legally privileged and protected in
-              law. If you are not the intended recipient, please advise us
-              immediately and do not disclose, copy or distribute the contents
-              to any person. We very much appreciate your help with this.
-              However, you also need to be aware that failure to comply with
-              these instructions may constitute a criminal offence
+              This section will be used to display testimonials. It will be
+              deployed to the next sprint.
             </p>
           </div>
           <div class="testimonial-item">
@@ -186,13 +192,8 @@
               <i class="bx bxs-star" id="star"></i>
             </div>
             <p>
-              This communication is intended for the person(s) or organisation
-              named and may be confidential, legally privileged and protected in
-              law. If you are not the intended recipient, please advise us
-              immediately and do not disclose, copy or distribute the contents
-              to any person. We very much appreciate your help with this.
-              However, you also need to be aware that failure to comply with
-              these instructions may constitute a criminal offence
+              This section will be used to display testimonials. It will be
+              deployed to the next sprint.
             </p>
           </div>
         </div>
@@ -202,7 +203,11 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me</span></h2>
 
-      <form action="https://formspree.io/f/mzzgrzpw" method="POST" id="contact-form">
+      <form
+        action="https://formspree.io/f/mzzgrzpw"
+        method="POST"
+        id="contact-form"
+      >
         <div class="input-group">
           <div class="input-box">
             <input type="text" name="name" placeholder="Full Name" required />
