drum kit project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phanuel Mathonsi Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -28,6 +28,7 @@
         <a href="#home" class="active">Home</a>
         <a href="#education">Education</a>
         <a href="#services">Services</a>
+        <a href="#projects">Projects</a>
         <a href="#testimonials">Testimonials</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -50,6 +51,14 @@
           <a href=""><i class="bx bxl-github"></i></a>
           <a href=""><i class="bx bxl-instagram-alt"></i></a>
           <a href=""><i class="bx bxl-twitter"></i></a>
+          <!-- WhatsApp icon with functional link -->
+          <a
+            href="https://wa.me/27649806133?text=Hello%20Phanuel%2C%20I%20visited%20your%20portfolio%20and%20would%20like%20to%20connect!"
+            target="_blank"
+            rel="noopener"
+          >
+            <i class="bx bxl-whatsapp"></i>
+          </a>
         </div>
 
         <div class="btn-group">
@@ -58,7 +67,7 @@
         </div>
       </div>
       <div class="home-img">
-        <img src="image.jpg" alt="" />
+        <img src="./images/image.jpg" alt="" />
       </div>
     </section>
 
@@ -71,7 +80,10 @@
           <div class="timeline-date">2021</div>
           <div class="timeline-content">
             <h3>High School</h3>
-            <p>Information for this part will be provided on the next deployemnts.</p>
+            <p>
+              Information for this part will be provided on the next
+              deployemnts.
+            </p>
           </div>
         </div>
         <div class="timeline-item">
@@ -79,7 +91,10 @@
           <div class="timeline-date">2022</div>
           <div class="timeline-content">
             <h3>Internship</h3>
-            <p>Information for this part will be provided on the next deployemnts.</p>
+            <p>
+              Information for this part will be provided on the next
+              deployemnts.
+            </p>
           </div>
         </div>
         <div class="timeline-item">
@@ -87,7 +102,10 @@
           <div class="timeline-date">2023</div>
           <div class="timeline-content">
             <h3>Cell C</h3>
-            <p>Information for this part will be provided on the next deployemnts.</p>
+            <p>
+              Information for this part will be provided on the next
+              deployemnts.
+            </p>
           </div>
         </div>
         <div class="timeline-item">
@@ -95,7 +113,10 @@
           <div class="timeline-date">2023</div>
           <div class="timeline-content">
             <h3>Cell C</h3>
-            <p>Information for this part will be provided on the next deployemnts.</p>
+            <p>
+              Information for this part will be provided on the next
+              deployemnts.
+            </p>
           </div>
         </div>
       </div>
@@ -143,13 +164,90 @@
       </div>
     </section>
 
+    <!-- Projects Section -->
+    <section class="projects" id="projects">
+      <h2 class="heading">Projects</h2>
+      <div class="projects-container">
+        <!-- Drum Kit -->
+        <div class="project-card">
+          <img src="./images/drum.jpg" alt="Drum Kit" class="project-img" />
+          <div class="project-info">
+            <h3>Drum Kit</h3>
+            <p>
+              An interactive drum kit that lets users play drum sounds using
+              keyboard or mouse clicks.
+            </p>
+            <a href="drumkit.html" class="btn" target="_blank">View Project</a>
+          </div>
+        </div>
+
+        <!-- To-Do App -->
+        <div class="project-card">
+          <img src="./images/todo.jpg" alt="To-Do App" class="project-img" />
+          <div class="project-info">
+            <h3>To-Do App</h3>
+            <p>
+              A simple and intuitive to-do list application to manage daily
+              tasks efficiently.
+            </p>
+            <a href="#" class="btn" target="_blank">View Project</a>
+          </div>
+        </div>
+        <!-- Calculator -->
+        <div class="project-card">
+          <img
+            src="./images/calculator.jpg"
+            alt="Calculator"
+            class="project-img"
+          />
+          <div class="project-info">
+            <h3>Calculator</h3>
+            <p>
+              A responsive calculator app built with JavaScript for basic
+              arithmetic operations.
+            </p>
+            <a href="#" class="btn" target="_blank">View Project</a>
+          </div>
+        </div>
+
+        <!-- Dice Game -->
+        <div class="project-card">
+          <img src="./images/dice.jpg" alt="Dice Game" class="project-img" />
+          <div class="project-info">
+            <h3>Dice Game</h3>
+            <p>
+              A fun dice rolling game where two players compete to get the
+              highest number.
+            </p>
+            <a href="#" class="btn" target="_blank">View Project</a>
+          </div>
+        </div>
+        <!-- Weather App -->
+        <div class="project-card">
+          <img
+            src="./images/weather.jpg"
+            alt="Weather App"
+            class="project-img"
+          />
+          <div class="project-info">
+            <h3>Weather App</h3>
+            <p>
+              A weather application that shows real-time weather information for
+              any city.
+            </p>
+            <a href="#" class="btn" target="_blank">View Project</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="testimonials" id="testimonials">
       <div class="testimonials-box">
         <h2 class="heading">Testimonials</h2>
 
         <div class="wrapper">
           <div class="testimonial-item">
-            <img src="2.jpg" alt="" />
+            <img src="./images/2.jpg" alt="" />
             <h2>Thonsie</h2>
 
             <div class="rating">
@@ -165,7 +263,7 @@
             </p>
           </div>
           <div class="testimonial-item">
-            <img src="1.jpg" alt="" />
+            <img src="./images/1.jpg" alt="" />
             <h2>Thonsie</h2>
 
             <div class="rating">
@@ -181,7 +279,7 @@
             </p>
           </div>
           <div class="testimonial-item">
-            <img src="3.jpg" alt="" />
+            <img src="./images/3.jpg" alt="" />
             <h2>Thonsie</h2>
 
             <div class="rating">
@@ -234,10 +332,20 @@
 
     <footer class="footer">
       <div class="social">
-        <a href=""><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/phanuel-mathonsi/"
+          ><i class="bx bxl-linkedin"></i
+        ></a>
         <a href=""><i class="bx bxl-github"></i></a>
         <a href=""><i class="bx bxl-instagram-alt"></i></a>
         <a href=""><i class="bx bxl-twitter"></i></a>
+        <!-- WhatsApp icon with functional link -->
+        <a
+          href="https://wa.me/27649806133?text=Hello%20Phanuel%2C%20I%20visited%20your%20portfolio%20and%20would%20like%20to%20connect!"
+          target="_blank"
+          rel="noopener"
+        >
+          <i class="bx bxl-whatsapp"></i>
+        </a>
       </div>
 
       <ul class="list">
@@ -259,6 +367,6 @@
       </ul>
       <p class="copyright">© Phanuel Mathonsi | All Rights Reserved</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
