--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
 
         <!-- To-Do App -->
         <div class="project-card">
-          <img src="./images/todo.jpg" alt="To-Do App" class="project-img" />
+          <img src="./images/todo.png" alt="To-Do App" class="project-img" />
           <div class="project-info">
             <h3>To-Do App</h3>
             <p>
               A simple and intuitive to-do list application to manage daily
               tasks efficiently.
             </p>
-            <a href="#" class="btn" target="_blank">View Project</a>
+            <a href="todo.html" class="btn" target="_blank">View Project</a>
           </div>
         </div>
         <!-- Calculator -->
