--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <!-- Calculator -->
         <div class="project-card">
           <img
-            src="./images/calculator.jpg"
+            src="./images/calculator.png"
             alt="Calculator"
             class="project-img"
           />
@@ -206,7 +206,7 @@
               A responsive calculator app built with JavaScript for basic
               arithmetic operations.
             </p>
-            <a href="#" class="btn" target="_blank">View Project</a>
+            <a href="calculator.html" class="btn" target="_blank">View Project</a>
           </div>
         </div>
 
