--- a/index.html
+++ b/index.html
@@ -364,6 +364,9 @@
         <li>
           <a href="#">Testimonials</a>
         </li>
+        <li>
+          <a href="login.html">login</a>
+        </li>
       </ul>
       <p class="copyright">© Phanuel Mathonsi | All Rights Reserved</p>
     </footer>
