--- a/welcome.html
+++ b/welcome.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome</h1>
-        <p>You have successfully logged in!</p>
+        <h1 id="welcomeMessage">Welcome</h1>
+        <p id="successMessage">You have successfully logged in!</p>
     </div>
 </body>
 </html>
