--- a/welcome.html
+++ b/welcome.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1 id="welcomeMessage">Welcome</h1>
-        <p id="successMessage">You have successfully logged in!</p>
+        <p id="successMessage">Login successful!</p>
     </div>
 </body>
 </html>
